# videos2kodi

./: CMakeLists.txt  CMakeLists.txt_back  README.md  RUN_ME.sh  git_init_steps  helloWorld.cpp  todo.txt
lib/: myfunc.lib  test.lib
myFunc/: CMakeLists.txt  myfunc.cpp  myfunc.h
src/: CMakeLists.txt  GUIDisplay.cpp  GUIDisplay.h  getFiles.cpp  getFiles.h  getLanguage.cpp  getLanguage.h  platform.h
